# IA-TP1

./: .env.example  .gitignore  README.md  app.py  carga.py  evaluacion.md  evaluacion.py  evaluacion2.md  pyproject.toml  rag_service.py  recuperacion.py  skills-lock.json  test_models.py
.agents/commands/: planificador.md
.agents/rules/: proyect_info.md
data/: registry.json
docs/: LLM_models.md  embedding_models.md  evaluacion-parametros.md
docs/prompts/: files_cleanup.md  improve-carga-saneo.md  matriz-evaluacion.md  plan_migracion_json.txt  process-carga.md  refactor-carga-to-support-json.md  refactor_recuperacion.md  review-matriz-evaluacion.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
saneamiento/: Documentacion_Tecnica_Saneamiento.docx  GUIA_TECNICA.md  PROMPTS.md  sanear.py  sanear_corpus.py
saneamiento/output/: 1-s2.0-S0957417412003727-main.toon  2-SistemasExpertos.toon  4-RNA-PSIMPLE-FCYT.toon  BDA Planificacion.toon  Cap 8- AGspdf.toon  IA - Programa de Cátedra (campus).toon  LogicaDifusa.toon  PROGRAMA - Investigación Operativa.toon  PROGRAMA INFORMATICA Y RRHH.toon  PROGRAMA- Metodología de la Investigación.docx.toon  Planificación 2025 - Comunicacion y Redes.toon  Psimple2021.toon  RS_paper_original.toon  SIMPLEX - Casos particulares.toon  U1-Modelos-Teoría.toon  U2-P Lineal-Teoría.toon  U3-Aplic Progr Lineal-Teoría.toon  U4-Programación Dinámica-Teoría.toon  corpus_saneado.toon
tests/: evaluacion-gemini1.md  evaluacion-gemini2.md  evaluacion-gemini3.md  evaluacion-gemini4.md  evaluacion.md  evaluacion1.md  evaluacion2.md  evaluacion3.md  evaluacionOllama.md  evaluacionOllamaTop3.md  evaluacionOllamaTop4.md  preguntas-respuestas.md  test-1.md  test-2.md  test-3.md  test-Gemini-BGEm3.md  test-GeminiPt1.md  test-GeminiPt1b.md  test-GeminiPt2.md  test-GeminiPt3.md  test-GeminiV2.md  test-Ollama-BGEm3.md  test-Ollama.BGEm3-2.md  test-OllamaV2.md  test-OllamaV3.md  test-OllamaV4.md  test-OllamaV5.md  testGeminiPostMejoras1.md  testGeminiPostMejoras2.md  testOllamaPostMejoras1.md  testOllamaPostMejoras2-2.md  testOllamaPostMejoras2.md  testOllamaPostMejoras3.md  testOllamaPostMejoras4.md
tests/evaluaciones/: evaluacionGemini25.md  testGeminiPostMejoras.md  testOllamaPostMejoras copy.md  (+1 more)
(+22 files in other folders)
